# mfauth

./: Cargo.toml  LICENSE  README.md  config.example.toml  flake.nix
.github/workflows/: rust.yml
src/: main.rs  persist.rs
