[package]
name = "mfauth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
clap = "3.0.0-beta.4"
hyper = { version = "0.14", features = [ "full" ] }
hyper-tls  = { version = "0.5" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1", features = [  "full" ] }
toml = "0.5"
url = "2.2"
