[package]
name = "mfauth"
version = "0.1.0"
edition = "2021"
description = "Simple CLI client to request and manage OAuth2 tokens"
license = "MIT"
keywords = [ "oauth2", "cli", "email", "mfa", "authentication" ]
categories = [ "command-line-utilities", "email", "authentication" ]
authors = [ "Rien Maertens <mfauth@rxn.be>" ]
repository = "https://github.com/rien/mfauth/"

[dependencies]
anyhow = "1"
chrono = { version = "0", features = [ "serde" ] }
clap = { version = "3", features = [ "derive" ] }
dirs = "4"
hyper = { version = "0", features = [ "full" ] }
hyper-tls = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [  "full" ] }
toml = "0"
url = "2"
